// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceTypesApi createResourceType() 1: Create non-existing resource type [3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6 - FrodoTestResourceType3] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684466760694,
  "description": "Frodo Test Resource Type Three",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684466760694,
  "name": "FrodoTestResourceType3",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "3ea23a32-ffdf-4a7f-a1f2-5d53fbba9ba6",
}
`;

exports[`ResourceTypesApi createResourceType() 2: Create existing resource type [e219144d-8d94-47b6-8789-3a7b820d6cde - FrodoTestResourceType4] 1`] = `
{
  "code": 409,
  "message": "Resource Type e219144d-8d94-47b6-8789-3a7b820d6cde already exists",
  "reason": "Conflict",
}
`;

exports[`ResourceTypesApi deleteResourceType() 1: Delete existing resource type [3d66c934-9bab-4363-973b-f5502245decc - FrodoTestResourceType7] 1`] = `{}`;

exports[`ResourceTypesApi deleteResourceType() 2: Delete non-existing resource type [00000000-0000-0000-0000-000000000000] 1`] = `
{
  "code": 404,
  "message": "Resource Type 00000000-0000-0000-0000-000000000000 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;

exports[`ResourceTypesApi getResourceType() 1: Get existing resource type by uuid [7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2 - FrodoTestResourceType1] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684466759462,
  "description": "Frodo Test Resource Type One",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684466759462,
  "name": "FrodoTestResourceType1",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2",
}
`;

exports[`ResourceTypesApi getResourceType() 2: Get non-existing resource type by uuid [00000000-0000-0000-0000-000000000000] 1`] = `
{
  "code": 404,
  "message": "Resource Type 00000000-0000-0000-0000-000000000000 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;

exports[`ResourceTypesApi getResourceTypeByName() 1: Get existing resource type by name [FrodoTestResourceType2 - ab5fb0da-8fe8-4f48-be05-aba822aa23bb] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684466759614,
      "description": "Frodo Test Resource Type Two",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684466759614,
      "name": "FrodoTestResourceType2",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "ab5fb0da-8fe8-4f48-be05-aba822aa23bb",
    },
  ],
  "resultCount": 1,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`ResourceTypesApi getResourceTypeByName() 2: Get non-existing resource type by name [DoesNotExist] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [],
  "resultCount": 0,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`ResourceTypesApi getResourceTypes() 1: Get all resource types 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684466759462,
      "description": "Frodo Test Resource Type One",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684466759462,
      "name": "FrodoTestResourceType1",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "7d0b246e-d6fc-4c90-b8f8-dcfb99187cb2",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684466759614,
      "description": "Frodo Test Resource Type Two",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684466759614,
      "name": "FrodoTestResourceType2",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "ab5fb0da-8fe8-4f48-be05-aba822aa23bb",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684466759877,
      "description": "Frodo Test Resource Type Four",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684466759877,
      "name": "FrodoTestResourceType4",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "e219144d-8d94-47b6-8789-3a7b820d6cde",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684466760033,
      "description": "Frodo Test Resource Type Five",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684466760033,
      "name": "FrodoTestResourceType5",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "cef1897f-1be5-4025-beed-a155605e2f83",
    },
    {
      "actions": {
        "action1": true,
        "action2": true,
      },
      "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "creationDate": 1684466760230,
      "description": "Frodo Test Resource Type Seven",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1684466760230,
      "name": "FrodoTestResourceType7",
      "patterns": [
        "pattern2://*:*/*?*",
        "pattern1://*:*/*",
      ],
      "uuid": "3d66c934-9bab-4363-973b-f5502245decc",
    },
    {
      "actions": {
        "GRANT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030586,
      "description": "The built-in OAuth2 Scope Resource Type for OAuth2policy-provided scope.",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1682866321756,
      "name": "OAuth2 Scope",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
        "*",
      ],
      "uuid": "d60b7a71-1dc6-44a5-8e48-e4b9d92dee8b",
    },
    {
      "actions": {
        "DELETE": true,
        "GET": true,
        "HEAD": true,
        "OPTIONS": true,
        "PATCH": true,
        "POST": true,
        "PUT": true,
      },
      "createdBy": "id=dsameuser,ou=user,ou=am-config",
      "creationDate": 1595479030487,
      "description": "The built-in URL Resource Type available to OpenAMPolicies.",
      "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
      "lastModifiedDate": 1682866321984,
      "name": "URL",
      "patterns": [
        "*://*:*/*",
        "*://*:*/*?*",
      ],
      "uuid": "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    },
  ],
  "resultCount": 7,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`ResourceTypesApi putResourceType() 1: Update existing resource type [cef1897f-1be5-4025-beed-a155605e2f83 - FrodoTestResourceType5] 1`] = `
{
  "actions": {
    "action1": true,
    "action2": true,
  },
  "createdBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "creationDate": 1684466760033,
  "description": "Frodo Test Resource Type Five",
  "lastModifiedBy": "id=8d9723a9-a439-4cbf-beb4-30e52811789d,ou=user,ou=am-config",
  "lastModifiedDate": 1684466760833,
  "name": "FrodoTestResourceType5",
  "patterns": [
    "pattern2://*:*/*?*",
    "pattern1://*:*/*",
  ],
  "uuid": "cef1897f-1be5-4025-beed-a155605e2f83",
}
`;

exports[`ResourceTypesApi putResourceType() 2: Update non-existing resource type [05e5fdb6-435e-43d9-b707-c73f7f347358 - FrodoTestResourceType6] 1`] = `
{
  "code": 404,
  "message": "Resource Type 05e5fdb6-435e-43d9-b707-c73f7f347358 does not exist in realm /alpha",
  "reason": "Not Found",
}
`;
